Adjusts to implements CreateChurchAction.php
